fixed project image not showing

--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -145,3 +145,10 @@
     justify-content: center;
   }
 }
+
+@media screen and (max-width: 933px) {
+
+  .hero {
+    height: auto;
+  }
+}
