--- a/src/components/ProjectPreview.css
+++ b/src/components/ProjectPreview.css
@@ -14,6 +14,10 @@
   overflow: hidden;
 }
 
+.project-image-container:hover {
+  cursor: pointer;
+}
+
 .projectImg {
   width: 100%;
   height: auto;
